# vihreat-vaalikoneet-2025

./: .gitignore  .gitmodules  2025-02-10_vaalikoneet.csv  2025-02-11_vaalikoneet.csv  claude.py  fix_files.py  pyproject.toml  single_doc.py  testivastaukset.py
.github/workflows/: hugo.yaml
ohjelmat/: kaupunkitavoitteet.txt  kulttuuripoliittinen.txt  liikennepoliittinen.txt  maaseutuohjelma.txt  periaateohjelma.txt  poliittinenohjelma.txt  soteohjelma.txt
sivusto/: hugo.toml
sivusto/content/HS__AL/: vastaus3.md  vastaus7.md  vastaus9.md
sivusto/content/HS__AL__SK/: vastaus0.md  vastaus1.md  vastaus10.md  vastaus100.md  vastaus101.md  vastaus102.md  vastaus103.md  vastaus104.md  vastaus105.md  vastaus106.md  vastaus107.md  vastaus108.md  vastaus109.md  vastaus11.md  vastaus110.md  vastaus111.md  vastaus112.md  vastaus113.md  vastaus114.md  vastaus115.md  vastaus116.md  vastaus117.md  vastaus118.md  vastaus119.md  vastaus12.md  vastaus120.md  vastaus121.md  vastaus122.md  vastaus123.md  vastaus124.md  vastaus125.md  vastaus126.md  vastaus127.md  vastaus128.md  vastaus129.md  vastaus13.md  vastaus130.md  vastaus131.md  vastaus132.md  vastaus133.md  (+216 more)
sivusto/content/IL/: vastaus305.md  vastaus306.md  vastaus307.md  vastaus308.md  vastaus309.md  vastaus310.md  vastaus311.md  vastaus312.md  vastaus313.md  vastaus314.md  vastaus315.md  vastaus316.md  vastaus317.md  vastaus318.md  vastaus319.md  vastaus320.md  vastaus321.md  vastaus322.md  vastaus323.md  vastaus324.md
sivusto/content/IS/: vastaus259.md  vastaus260.md  vastaus261.md  vastaus262.md  vastaus263.md  (+41 more)
(+2 files in other folders)
